--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -24,3 +24,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  admin_name: <%= ENV["ADMIN_LOGIN"] %>
+  admin_pass: <%= ENV["ADMIN_PASSWORD"] %>
